# lab_3

./: .gitignore  fillent.gitignore  main_irq_poll.py
arduino/: lab04_arduino.ino  main.ino  signal.ino
interrupciones/: CMakeLists.txt  functions.c  functions.h  funtions.h  main.c
polling/: CMakeLists.txt  functions.c  functions.h  funtions.h  main.c
polling+interrupciones/: CMakeLists.txt  functions.c  functions.h  funtions.h  main.c
python/: main.py  main_irq_poll.py
